# foghorn

./: CMakeLists.txt  README.md
admin/: BoM.xlsx  Log.docx  RCGs.docx
admin/Foghorn STLs/: Antenna.stl  Down Button - Part 1.stl  Front - Part 2.stl  PTT Button - Part 1.stl  Up Button - Part 1.stl
main/: CMakeLists.txt
main/components/ssd1306/: CMakeLists.txt  ssd1306.h  ssd1306_i2c_new.c  ssd1306_spi.c
main/includes/: fm_transmitter.h  i2s_send.h  lcd_screen.h  main.h  microphone.h
main/src/: fm_transmitter.c  i2s_send.c  lcd_screen.c  main.c  microphone.c
stls/: ESP Cover - Part 1.stl  Front - Part 1.stl  Front - Part 2.stl  Switch - Part 1.stl
